<resources>
    <string name="app_name">Bowling Score Application</string>
    <string name="anotherattempt">Well Played</string>
    <string name="succeednextround">You\'ll succeed the next round!\nNext Player!</string>
    <string name="alldown">Congratulation, all pins were down.\nNext Player!</string>
    <string name="otherplayerround">Now it\'s the round of the other player</string>
    <string name="morepins">You can\'t make fall more pins than the remaining ones</string>
    <string name="resettext">Everything has been set to 0 correctly</string>
    <string name="drawfinal">It\'s a draw, good game</string>
    <string name="nosecondplayername">You did not enter the second player name</string>
    <string name="nofirstplayername">You did not enter the first player name</string>
    <string name="walcometoapp">Welcome to this Score Keeper App!</string>
    <string name="hintfirstplayertextview">Name First Player</string>
    <string name="hintsecondplayertextview">Name Second Player</string>
    <string name="instructionTextView">When you are ready press the button below!</string>
    <string name="buttonStartGame">Start the game!</string>
    <string name="goodluckImageViewContent">Good Luck!</string>
    <string name="resetButtonText">Reset</string>
    <string name="player_1">Player 1</string>
    <string name="roundText">Round:</string>
    <string name="launchText">Launch:</string>
    <string name="strikeButton">Strike</string>
    <string name="onepointButton">1</string>
    <string name="twopointButton">2</string>
    <string name="threepointButton">3</string>
    <string name="fourpointButton">4</string>
    <string name="fivepointButton">5</string>
    <string name="sixpointButton">6</string>
    <string name="sevenpointButton">7</string>
    <string name="eightpointButton">8</string>
    <string name="ninepointButton">9</string>
    <string name="zeropointButton">0</string>
    <string name="player_2">Player 2</string>
    <string name="startingPoints">0</string>
    <string name="congratulations">Congratulations</string>
    <string name="winnerName">winnerName</string>
</resources>
