<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gjini.loris.bowlingscoreapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/CodeFontWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/welcome_margin"
            android:text="@string/walcometoapp" />

        <EditText
            android:id="@+id/FirstPlayer"
            style="@style/EditTextPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_margin"
            android:hint="@string/hintfirstplayertextview" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/SecondPlayer"
            style="@style/EditTextPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_margin"
            android:hint="@string/hintsecondplayertextview" />

        <TextView
            style="@style/CodeFontInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/instruction_margin"
            android:text="@string/instructionTextView" />

        <ImageView
            android:id="@+id/GoodLuck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/goodluckImageViewContent"
            android:src="@drawable/goodluck" />

        <Button
            android:id="@+id/Start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/button_start_margin"
            android:onClick="goToPointActivity"
            android:text="@string/buttonStartGame"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>