<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gjini.loris.bowlingscoreapplication.PointActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <ScrollView
                android:id="@+id/page_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Player1"
                        style="@style/playerTextFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/playertext_margin"
                        android:text="@string/player_1" />

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/pointsFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/points_margin"
                        android:text="@string/startingPoints" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                style="@style/datasTextFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roundText" />

                            <TextView
                                android:id="@+id/roundNumberA"
                                style="@style/datasValueFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                style="@style/datasTextFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/launchText" />

                            <TextView
                                android:id="@+id/launchNumberA"
                                style="@style/datasValueFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1" />

                        </LinearLayout>


                    </LinearLayout>

                    <Button
                        android:id="@+id/strikea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/button_points_margin"
                        android:onClick="allpinA"
                        android:text="@string/strikeButton" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_points_margin"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/onepointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="onepinA"
                            android:text="@string/onepointButton" />

                        <Button
                            android:id="@+id/twopointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="twopinA"
                            android:text="@string/twopointButton" />

                        <Button
                            android:id="@+id/threepointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="threepinA"
                            android:text="@string/threepointButton" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_points_margin"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/fourpointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="fourpinA"
                            android:text="@string/fourpointButton" />

                        <Button
                            android:id="@+id/fivepointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="fivepinA"
                            android:text="@string/fivepointButton" />

                        <Button
                            android:id="@+id/sixpointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="sixpinA"
                            android:text="@string/sixpointButton" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/sevenpointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="sevenpinA"
                            android:text="@string/sevenpointButton" />

                        <Button
                            android:id="@+id/eightpointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="eightpinA"
                            android:text="@string/eightpointButton" />

                        <Button
                            android:id="@+id/ninepointa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="ninepinA"
                            android:text="@string/ninepointButton" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/zeropointa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="zeropinA"
                        android:text="@string/zeropointButton" />

                    <ImageView
                        style="@style/imageDecoration"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/imagedecoration_margin"
                        android:src="@drawable/bowling" />

                </LinearLayout>

            </ScrollView>

            <ScrollView
                android:id="@+id/page_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Player2"
                        style="@style/playerTextFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/playertext_margin"
                        android:text="@string/player_2" />

                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/pointsFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/points_margin"
                        android:text="@string/startingPoints" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                style="@style/datasTextFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roundText" />

                            <TextView
                                android:id="@+id/roundNumberB"
                                style="@style/datasValueFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                style="@style/datasTextFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/launchText" />

                            <TextView
                                android:id="@+id/launchNumberB"
                                style="@style/datasValueFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1" />

                        </LinearLayout>


                    </LinearLayout>

                    <Button
                        android:id="@+id/strikeb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/button_points_margin"
                        android:onClick="allpinB"
                        android:text="@string/strikeButton" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_points_margin"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/onepointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="onepinB"
                            android:text="@string/onepointButton" />

                        <Button
                            android:id="@+id/twopointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="twopinB"
                            android:text="@string/twopointButton" />

                        <Button
                            android:id="@+id/threepointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="threepinB"
                            android:text="@string/threepointButton" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_points_margin"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/fourpointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="fourpinB"
                            android:text="@string/fourpointButton" />

                        <Button
                            android:id="@+id/fivepointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="fivepinB"
                            android:text="@string/fivepointButton" />

                        <Button
                            android:id="@+id/sixpointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="sixpinB"
                            android:text="@string/sixpointButton" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/sevenpointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="sevenpinB"
                            android:text="@string/sevenpointButton" />

                        <Button
                            android:id="@+id/eightpointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="eightpinB"
                            android:text="@string/eightpointButton" />

                        <Button
                            android:id="@+id/ninepointb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="ninepinB"
                            android:text="@string/ninepointButton" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/zeropointb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="zeropinB"
                        android:text="@string/zeropointButton" />

                    <ImageView
                        style="@style/imageDecoration"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/imagedecoration_margin"
                        android:src="@drawable/bowling" />

                </LinearLayout>

            </ScrollView>

    </android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/resetScore"
        style="@style/resetButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="@dimen/reset_button_margin"
        android:background="@drawable/roundbutton"
        android:onClick="resetScore"
        android:text="@string/resetButtonText" />

</RelativeLayout>
